# sskind-collection-agent

./: .gitignore  README.md  app_script.py  pyproject.toml  requirements.txt  run_all_scopes.py
config/: constants.py  scope_config.yaml
src/: config_utils.py  log_utils.py
src/agents/: agent_utils.py  common_agent.py  common_agent_2step.py  common_step.py  constants.py  identify_original_step.py  identify_relevant_step.py  identify_step.py  prompt_utils.py
src/database/: pmid_paper_db.py
src/paper_query/: article_retriever.py  constants.py  html_extractor.py  pubmed_query.py  table_utils.py  utils.py
src/workflow/: identify_workflow.py  workflow_utils.py
system_tests/: conftest.py  test_identify_original_step.py  test_identify_relevance_step.py  test_identify_step.py  test_identify_workflow.py  test_pubmed_query.py  test_read_config.py
system_tests/data/: 38987616.txt
