[project]
name = "sskind-collection-agent"
version = "1.0.0"
description = ""
authors = [
    {name = "fengsh",email = "shaohong.feng.78@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.11,<4.0"
dependencies = [
    "requests (>=2.32.4,<3.0.0)",
    "tenacity (>=9.1.2,<10.0.0)",
    "ratelimit (>=2.2.1,<3.0.0)",
    "fake-useragent (>=2.2.0,<3.0.0)",
    "shortuuid (>=1.0.13,<2.0.0)",
    "beautifulsoup4 (>=4.13.4,<5.0.0)",
    "pandas (>=2.3.0,<3.0.0)",
    "langchain (>=0.3.26,<0.4.0)",
    "langchain-openai (>=0.3.25,<0.4.0)",
    "langchain-community (>=0.3.26,<0.4.0)",
    "langgraph (>=0.4.8,<0.5.0)",
    "python-dotenv (>=1.1.0,<2.0.0)",
    "lxml (>=5.4.0,<6.0.0)",
    "bump2version (>=1.0.1,<2.0.0)"
]

[tool.poetry]

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
